examples/test/testpolicy2512.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2512
  namespace: namespace245
spec:
  podSelector:
    matchLabels:
      key27: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value17
          key15: value34
          key6: value11
      podSelector:
        matchLabels:
          key41: value31
